--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -5,6 +5,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: rgb(247, 242, 242);
+
+    h1{
+      color: #7451f8;
+      margin-bottom: 16px;
+    }
 
     form{
       display: flex;
@@ -19,19 +25,20 @@
       }
 
       button{
-        width: 200px;
-        height: 30px;
+        width: 208px;
+        height: 36px;
         border: none;
-        background-color: purple;
+        background-color: #7451f8;
         color: white;
         font-weight: bold;
         cursor: pointer;
+        margin-top: 10px;
       }
 
       span{
-        font-size: 12px;
+        font-size: 15px;
         color: red;
-        margin-top: 10px;
+        margin-top: 20px;
       }
     }
 }
