--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -3,12 +3,16 @@
     border-right: 0.5px solid rgb(230, 227, 227);
     min-height: 100vh;
     background-color: white;
+    overflow: auto;
+    
+    
   
     .top {
       height: 50px;
       display: flex;
       align-items: center;
       justify-content: center;
+      
   
       .logo {
         font-size: 20px;
@@ -24,29 +28,28 @@
   
     .center {
       padding-left: 10px;
+      position:fixed;
+      margin-top: 20px;
+      
   
       ul {
         list-style: none;
         margin: 0;
         padding: 0;
+        width: 100%;
   
         .title {
-          font-size: 10px;
+          font-size: 12px;
           font-weight: bold;
           color: #999;
-          margin-top: 15px;
-          margin-bottom: 5px;
+          
         }
   
         li {
           display: flex;
-          align-items: center;
-          padding: 5px;
+          
+          padding: 10px;
           cursor: pointer;
-  
-          &:hover {
-            background-color: #ece8ff;
-          }
   
           .icon {
             font-size: 18px;
@@ -54,10 +57,13 @@
           }
   
           span{
-              font-size: 13px;
+              font-size: 16px;
               font-weight: 600;
               color: #888;
               margin-left: 10px;
+          }
+          span:hover{
+            color: #7451f8;
           }
         }
       }
